# framwork

./: README.md
app/: .tags  .tags_sorted_by_file  Readme.txt  build.sh
app/.svn/: all-wcprops  entries
app/lib/include/: defaultpacketstreamer.h  iserveradapter.h  packetqueuethread.h  tbtimeutil.h  tcpconnection.h
app/lib/include/tbsys/: Cond.h
app/lib/lib/: libtbnet.la  libtbnet.so.0.0.0  libtbsys.la
app/libdmsg/: README  build.sh
app/libdmsg/.svn/: all-wcprops  entries
app/libdmsg/.svn/text-base/: librdkafka.patch.svn-base
app/libdmsg/include/: Consumer.h  ConsumerActor.h  DmsgWorker.h  KafkaHandle.h  Partitioner.h  Producer.h
app/libdmsg/include/.svn/: all-wcprops  entries
app/libdmsg/librdkafka/: Makefile.config  config.cache  config.h  config.log.old  rdkafka.pc
app/libdmsg/librdkafka/.svn/: all-wcprops  entries
app/libdmsg/librdkafka/examples/: Makefile  rdkafka_example  rdkafka_example_cpp  rdkafka_example_jt.c  rdkafka_example_jt.cpp  rdkafka_performance
app/libdmsg/librdkafka/src/: librdkafka.lds  librdkafka.so.1  rdaddr.d  rdcrc32.d  rdgz.d  rdkafka.d  rdkafka_broker.d  rdkafka_defaultconf.d  rdkafka_msg.d  rdkafka_offset.d  rdkafka_timer.d  rdkafka_topic.d  rdlog.d  rdqueue.d  rdrand.d  rdthread.d  snappy.d
app/libdmsg/librdkafka/src-cpp/: ConfImpl.d  ConsumerImpl.d  HandleImpl.d  MessageImpl.d  ProducerImpl.d  RdKafka.d  TopicImpl.d  librdkafka++.so.1
app/libdmsg/sample/: Makefile
app/libdmsg/sample/.svn/: all-wcprops  entries
app/libdmsg/src/: Config.cpp  DmsgWorker.cpp  Makefile  Producer.cpp
app/libdmsg/test/: TestConfig.cpp  TestConsumer.cpp
app/qconf_base/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool
app/qconf_base/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
app/qconf_base/src/: Makefile  Makefile.am  Makefile.in  libqonf_la-md5.lo  libqonf_la-qconf_format.lo  libqonf_la-qconf_log.lo  libqonf_la-qconf_msg.lo  libqonf_la-qconf_shm.lo  libqonf_la-qhash.lo  libqonf_la-qhasharr.lo  qconf_shm.cc  qconf_shm.h  qconf_shm_get_test.cpp  qconf_shm_set_test.cpp  qhasharr.cpp
app/qconf_base/src/.deps/: libqonf_la-md5.Plo  libqonf_la-qconf_format.Plo  libqonf_la-qconf_log.Plo  libqonf_la-qconf_msg.Plo  libqonf_la-qconf_shm.Plo  libqonf_la-qhash.Plo  libqonf_la-qhasharr.Plo
app/qconf_base/src/.libs/: libqonf.la  libqonf.lai
app/rpm/.svn/: all-wcprops  entries
app/tair_2.3.2_redis/: .tags  .tags_sorted_by_file  Makefile  Makefile.in  config.status  configure  configure.ac  cplib.sh  libtool
app/tair_2.3.2_redis/.svn/: all-wcprops  dir-prop-base  entries
app/tair_2.3.2_redis/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
app/tair_2.3.2_redis/google-perftools-1.8.2/: libtool
app/tair_2.3.2_redis/rpm/: tair_rdb.spec
app/tair_2.3.2_redis/scripts/: Makefile  Makefile.in
app/tair_2.3.2_redis/share/: Makefile  Makefile.in
app/tair_2.3.2_redis/src/: Makefile  Makefile.am  Makefile.in
app/tair_2.3.2_redis/src/storage/rdb/: Makefile  Makefile.am  Makefile.in  redis_db_session.h
app/tair_2.3.2_redis/src/storage/rdb/.deps/: rdb_manager.Po  redis_db_context.Po  redis_db_session.Po  redis_server_cron.Po
app/tair_2.3.2_redis/src/storage/rdb/.svn/: all-wcprops  entries
app/tair_2.3.2_redis/src/storage/rdb/.svn/text-base/: redis_db.h.svn-base
app/tair_2.3.2_redis/src/storage/rdb/redis/: Makefile  zipmap.c
app/tair_2.3.2_redis/src/storage/rdb/redis/.svn/: all-wcprops  entries
app/tair_2.3.2_redis/src/storage/rdb/redis/.svn/text-base/: db.c.svn-base  rdb.c.svn-base  redis.c.svn-base  redis.h.svn-base  t_hash.c.svn-base  t_set.c.svn-base  zipmap.c.svn-base  zmalloc.h.svn-base
app/tair_2.3.2_redis/test/: Makefile  Makefile.in
app/tbnet/.svn/: all-wcprops  entries
app/tbnet/src/: Makefile.am  connection.cpp  connection.h  connectionmanager.cpp  tcpacceptor.cpp  transport.h
app/tbnet/test/: echoclient.cpp
app/tbsys/.svn/: all-wcprops  entries
app/tbsys/src/: .tags  .tags_sorted_by_file  Cond.cpp  Cond.h  Makefile.am  bytebuffer.cpp  bytebuffer.h  bytebuffer_test.cpp  config.cpp  config.h  defaultrunnable.cpp  filequeue.cpp  filequeue.h  tblog.h  tbnetutil.cpp
app/tutorial/qconf_base/: Makefile.am  qconf_log_test.cpp  qconf_shm_set_test.cpp  qonf_msg_recv_test.cpp  qonf_msg_send_test.cpp  qonf_msg_test.cpp  shmdata.h  shmread.c  shmwrite.c
(+305 files in other folders)
